--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 <div class="main-content">
     <img src="Schermafbeelding%202023-08-28%20224948.png" alt="Guido Huisman" class="mb-4" />
-    <p>Contact Information: [Your contact information]</p>
-    <a href="Resume%20-%20Guido%20Huisman%20(1).pdf" target="_blank" class="btn btn-primary mt-3">Download My Resume</a>
+    <p>Contact Information: Guido Huisman
+        125 SW 5th Terrace, 3408, 32601, Gainesville, Florida</p>
     <iframe src="Resume%20-%20Guido%20Huisman%20(1).pdf" width="800" height="600" style="border:none;"></iframe>
 </div>
 
