--- a/index.html
+++ b/index.html
@@ -1,52 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guido Huisman's Resume</title>
-    
-    <!-- Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    
-    <!-- Google Font (In this example, I'm using 'Roboto', but you can change this) -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
+    <title>Guido Huisman - CV & Portfolio</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
-        /* Applying the Google Font to the body */
-        body {
-            font-family: 'Roboto', sans-serif;
-            padding: 20px;
-        }
-
-        /* Centering the main content for a better presentation */
-        .main-content {
-            text-align: center;
-            max-width: 800px;
-            margin: 40px auto;
-        }
-
-        /* Styling the image */
-        img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;  /* Adds rounded corners */
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Adds a subtle shadow */
+        .bg-custom-purple {
+            background-color: #5c54a4;
         }
     </style>
 </head>
-<body>
 
-<div class="main-content">
-    <img src="Schermafbeelding%202023-08-28%20224948.png" alt="Guido Huisman" class="mb-4" />
-    <p>Contact Information: Guido Huisman
-        125 SW 5th Terrace, 3408, 32601, Gainesville, Florida</p>
-    <iframe src="Resume%20-%20Guido%20Huisman%20(1).pdf" width="800" height="600" style="border:none;"></iframe>
-</div>
+<body class="font-'Open Sans'">
+    <div class="bg-custom-purple text-white p-6">
+        <div class="container mx-auto">
+            <header class="flex justify-between items-center">
+                <div>
+                    <h1 class="text-2xl">Guido Huisman</h1>
+                    <p>1255 Avon Terrace, Condeixa, Lisbon 3220-187</p>
+                    <p>+073 243 3611 999</p>
+                    <p>guido.huisman@gmail.com</p>
+                </div>
+                <nav>
+                    <ul class="flex space-x-4">
+                        <li><a href="#" class="hover:text-gray-200">Home</a></li>
+                        <li><a href="#" class="hover:text-gray-200">About</a></li>
+                        <li><a href="#" class="hover:text-gray-200">What we offer</a></li>
+                        <li><a href="#" class="hover:text-gray-200">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
 
-<!-- Optional: Bootstrap JS (if you want to use any of Bootstrap's JS components in the future) -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+            <div class="mt-12">
+                <div class="flex">
+                    <div class="w-1/3">
+                        <img src="https://placehold.co/300x300" alt="Portrait of Guido Huisman, a professional consultant" class="rounded-full">
+                    </div>
+                    <div class="w-2/3 pl-6">
+                        <h2 class="text-4xl font-bold">Guido Huisman - Your Science, Research, and Business Consultor</h2>
+                        <p>Welcome to my CV & Portfolio website. Discover my expertise in science, research, business, psychology, writing, and consulting.</p>
+                        <button class="bg-white text-purple-800 font-bold py-2 px-4 rounded mt-4">Contact us</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="container mx-auto my-12">
+        <section>
+            <h2 class="text-3xl font-bold mb-6">Welcome to My CV & Portfolio Website</h2>
+            <p class="mb-6">As a dedicated professional with a diverse background in science, research, business, psychology, writing, and consulting, I am excited to present my skills and experience to you. Explore my website to learn more about how I can contribute to your projects and objectives.</p>
+        </section>
+
+        <section>
+            <h2 class="text-3xl font-bold mb-6">Services</h2>
+            <div class="grid grid-cols-2 gap-4">
+                <div>
+                    <h3 class="text-2xl font-bold mb-2">Science & Research Consulting</h3>
+                    <p>Specialist consultancy services for scientific research projects and data analysis.</p>
+                </div>
+                <div>
+                    <h3 class="text-2xl font-bold mb-2">Business Consulting</h3>
+                    <p>Strategic, idealistic and solutions for businesses looking to optimize their operations and achieve growth.</p>
+                </div>
+                <div class="col-span-2">
+                    <img src="https://placehold.co/1024x400" alt="A detailed business and research strategy chart" class="rounded">
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
+
 </html>
