--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <header class="flex justify-between items-center">
                 <div>
                     <h1 class="text-2xl">Guido Huisman</h1>
-                    <p>1255 Avon Terrace, Condeixa, Lisbon 3220-187</p>
+                    <p>125 SW 5th Terrace, 3408, 32601, Gainesville, Florida</p>
                     <p>+073 243 3611 999</p>
                     <p>guido.huisman@gmail.com</p>
                 </div>
@@ -38,7 +38,7 @@
             <div class="mt-12">
                 <div class="flex">
                     <div class="w-1/3">
-                        <img src="https://placehold.co/300x300" alt="Portrait of Guido Huisman, a professional consultant" class="rounded-full">
+                        <img src="Schermafbeelding%202023-08-28%20224948.png" alt="Guido Huisman" class="rounded-full mb-4">
                     </div>
                     <div class="w-2/3 pl-6">
                         <h2 class="text-4xl font-bold">Guido Huisman - Your Science, Research, and Business Consultor</h2>
@@ -51,26 +51,10 @@
     </div>
 
     <div class="container mx-auto my-12">
-        <section>
-            <h2 class="text-3xl font-bold mb-6">Welcome to My CV & Portfolio Website</h2>
-            <p class="mb-6">As a dedicated professional with a diverse background in science, research, business, psychology, writing, and consulting, I am excited to present my skills and experience to you. Explore my website to learn more about how I can contribute to your projects and objectives.</p>
-        </section>
-
-        <section>
-            <h2 class="text-3xl font-bold mb-6">Services</h2>
-            <div class="grid grid-cols-2 gap-4">
-                <div>
-                    <h3 class="text-2xl font-bold mb-2">Science & Research Consulting</h3>
-                    <p>Specialist consultancy services for scientific research projects and data analysis.</p>
-                </div>
-                <div>
-                    <h3 class="text-2xl font-bold mb-2">Business Consulting</h3>
-                    <p>Strategic, idealistic and solutions for businesses looking to optimize their operations and achieve growth.</p>
-                </div>
-                <div class="col-span-2">
-                    <img src="https://placehold.co/1024x400" alt="A detailed business and research strategy chart" class="rounded">
-                </div>
-            </div>
+        <section class="main-content">
+            <img src="Schermafbeelding%202023-08-28%20224948.png" alt="Guido Huisman" class="mb-4" />
+            <p>Contact Information: Guido Huisman 125 SW 5th Terrace, 3408, 32601, Gainesville, Florida</p>
+            <iframe src="Resume%20-%20Guido%20Huisman%20(1).pdf" width="800" height="600" style="border:none;"></iframe>
         </section>
     </div>
 </body>
