--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <header class="flex justify-between items-center">
                 <div>
                     <h1 class="text-2xl">Guido Huisman</h1>
-                    <p>125 SW 5th Terrace, 3408, 32601, Gainesville, Florida</p>
+                    <p>Gainesville, Florida</p>
                     <p>+073 243 3611 999</p>
-                    <p>guido.huisman@gmail.com</p>
+                    <p>ism</p>
                 </div>
                 <nav>
                     <ul class="flex space-x-4">
@@ -38,7 +38,7 @@
             <div class="mt-12">
                 <div class="flex">
                     <div class="w-1/3">
-                        <img src="Schermafbeelding%202023-08-28%20224948.png" alt="Guido Huisman" class="rounded-full mb-4">
+                        <img src="" alt="Guido Huisman" class="rounded-full mb-4">
                     </div>
                     <div class="w-2/3 pl-6">
                         <h2 class="text-4xl font-bold">Guido Huisman - Your Science, Research, and Business Consultor</h2>
