--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container mx-auto my-12">
         <section class="main-content">
             <img src="Schermafbeelding%202023-08-28%20224948.png" alt="Guido Huisman" class="mb-4" />
-            <p>Contact Information: Guido Huisman 125 SW 5th Terrace, 3408, 32601, Gainesville, Florida</p>
+            <p>Contact Information: , Gainesville, Florida</p>
             <iframe src="Resume%20-%20Guido%20Huisman%20(1).pdf" width="800" height="600" style="border:none;"></iframe>
         </section>
     </div>
