--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <img src="" alt="Guido Huisman" class="rounded-full mb-4">
                     </div>
                     <div class="w-2/3 pl-6">
-                        <h2 class="text-4xl font-bold">Guido Huisman - Your Science, Research, and Business Consultor</h2>
+                        <h2 class="text-4xl font-bold">search, and Business </h2>
                         <p>Welcome to my CV & Portfolio website. Discover my expertise in science, research, business, psychology, writing, and consulting.</p>
                         <button class="bg-white text-purple-800 font-bold py-2 px-4 rounded mt-4">Contact us</button>
                     </div>
