--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
           </li>
         </ul>
         <div class="navbar-buttons mbr-section-btn">
-          <a class="btn btn-primary display-4" href="https://mobiri.se">Portfolio</a>
+          <a class="btn btn-primary display-4" href="www.guidohuisman.com">Portfolio</a>
         </div>
       </div>
     </div>
