--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
     <div class="container">
       <div class="navbar-brand">
         <span class="navbar-logo">
-					<a href="https://mobiri.se">
+					<a href="">
 						<img src="assets/images/photo-1488190211105-8b0e65b80b4e.jpeg" style="height: 4.3rem;">
 					</a>
 				</span>
