--- a/index.html
+++ b/index.html
@@ -882,14 +882,14 @@
                           <li class="mbr-text item-wrap">Phone: <a href="tel:+13863441111" class="text-black">+13863441111</a></li>
                           <li class="mbr-text item-wrap">WhatsApp: <a href="tel:+13863441111" class="text-black">+13863441111</a></li>
                           <li class="mbr-text item-wrap">Email: <a href="mailto:guidohuisman@gmail.com" class="text-black">guidohuisman@gmail.com</a></li>
-                          <li class="mbr-text item-wrap">Address: Hanscom Air Force Base United States</li>
-                          <li class="mbr-text item-wrap">Working Hours: Mon - Fri: 9am - 5pm</li>
+                          <li class="mbr-text item-wrap">Address: Gainesville, Florida</li>
+                          <li class="mbr-text item-wrap">Feel free to reach out!</li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="map-wrapper col-md-12 col-lg-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key&#x3D;AIzaSyCt1265A4qvZy9HKUeA8J15AOC4SrCyZe4&amp;q&#x3D;Hanscom%20Air%20Force%20Base%20United%20States" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="embed google maps location here " allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
@@ -1001,7 +1001,7 @@
 
             <div class="col-12 mt-5">
                 <p class="mbr-fonts-style copyright display-7">
-                    © 2023 Professional Portfolio Showcase. All rights reserved.
+                    © 2023 Guido Huisman
                 </p>
             </div>
         </div>
