--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
 					</a>
 				</span>
 				<span class="navbar-caption-wrap">
-          <a class="navbar-caption text-black display-4" href="insert link here">Portfolio</a>
+          <a class="navbar-caption text-black display-4" href="insert link here">Resume</a>
         </span>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -959,13 +959,13 @@
             <div class="row-links">
                 <ul class="header-menu">
                 <li class="header-menu-item mbr-fonts-style display-5">
-                    <a href="#" class="text-white">Home</a>
-                  </li><li class="header-menu-item mbr-fonts-style display-5">
-                    <a href="#" class="text-white">About</a>
+                    <a href="#" class="text-white">About Me</a>
                   </li><li class="header-menu-item mbr-fonts-style display-5">
                     <a href="#" class="text-white">Portfolio</a>
                   </li><li class="header-menu-item mbr-fonts-style display-5">
-                    <a href="#" class="text-white">Contact</a>
+                    <a href="#" class="text-white">Resume</a>
+                  </li><li class="header-menu-item mbr-fonts-style display-5">
+                    <a href="#" class="text-white">Contact Info</a>
                   </li></ul>
               </div>
 
@@ -977,23 +977,13 @@
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="#" target="_blank">
-                            <span class="mbr-iconfont socicon-twitter socicon"></span>
-                        </a>
-                    </div>
-                    <div class="soc-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.instagram.com/guidus125/" target="_blank">
                             <span class="mbr-iconfont socicon-instagram socicon"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.linkedin.com/in/guidohuisman" target="_blank">
                             <span class="mbr-iconfont socicon socicon-linkedin"></span>
-                        </a>
-                    </div>
-                    <div class="soc-item">
-                        <a href="#" target="_blank">
-                            <span class="mbr-iconfont socicon socicon-twitch"></span>
                         </a>
                     </div>
                 </div>
