--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
 					</a>
 				</span>
 				<span class="navbar-caption-wrap">
-          <a class="navbar-caption text-black display-4" href="insert link here">Resume</a>
+          <a class="navbar-caption text-black display-4" href="insert link here">About me</a>
         </span>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
