--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
     <div class="row">
       <div class="content-wrap col-12 col-md-10">
         <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-4 display-1">
-          <strong>Professional Showcase</strong>
+          <strong>Guido Huisman</strong>
         </h1>
         <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">This is me</p>
         <div class="mbr-section-btn"><a class="btn btn-white-outline display-7" href="#">Explore Now</a></div>
