--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
           <strong>Guido Huisman</strong>
         </h1>
         <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">This is me</p>
-        <div class="mbr-section-btn"><a class="btn btn-white-outline display-7" href="#">Explore Now</a></div>
+        <div class="mbr-section-btn"><a class="btn btn-white-outline display-7" href="#">BSc, MSc, Research MSc</a></div>
       </div>
     </div>
   </div>
