--- a/index.html
+++ b/index.html
@@ -959,13 +959,13 @@
             <div class="row-links">
                 <ul class="header-menu">
                 <li class="header-menu-item mbr-fonts-style display-5">
-                    <a href="#" class="text-white">About Me</a>
+                    <a href="about me.html" class="text-white">About Me</a>
                   </li><li class="header-menu-item mbr-fonts-style display-5">
-                    <a href="#" class="text-white">Portfolio</a>
+                    <a href="portfolio.html" class="text-white">Portfolio</a>
                   </li><li class="header-menu-item mbr-fonts-style display-5">
-                    <a href="#" class="text-white">Resume</a>
+                    <a href="resume.html" class="text-white">Resume</a>
                   </li><li class="header-menu-item mbr-fonts-style display-5">
-                    <a href="#" class="text-white">Contact Info</a>
+                    <a href="contact.html" class="text-white">Contact Info</a>
                   </li></ul>
               </div>
 
