--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
 					</a>
 				</span>
 				<span class="navbar-caption-wrap">
-          <a class="navbar-caption text-black display-4" href="insert link here">About me</a>
+          <a class="navbar-caption text-black display-4" href="about me.html">About me</a>
         </span>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -972,7 +972,7 @@
             <div class="col-12 mt-4">
                 <div class="social-row">
                     <div class="soc-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.facebook.com/guido.huisman/" target="_blank">
                             <span class="mbr-iconfont socicon socicon-facebook display-7"></span>
                         </a>
                     </div>
