--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
     <div class="container">
       <div class="navbar-brand">
         <span class="navbar-logo">
-					<a href="insert link here">
+					<a href="about me.html">
 						<img src="insert image here" style="height: 4.3rem;">
 					</a>
 				</span>
@@ -619,18 +619,18 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
           <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="#">Resume</a>
+            <a class="nav-link link text-black display-4" href="resume.html">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="#"
+            <a class="nav-link link text-black display-4" href="contact.html"
               aria-expanded="false">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="#">Research</a>
+            <a class="nav-link link text-black display-4" href="research.html">Research</a>
           </li>
         </ul>
         <div class="navbar-buttons mbr-section-btn">
-          <a class="btn btn-primary display-4" href="">Portfolio</a>
+          <a class="btn btn-primary display-4" href="portfolio.html">Portfolio</a>
         </div>
       </div>
     </div>
