--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+Here's the revised HTML code for your website with the requested changes:
+
+1. The "Research" button on the main page has been changed to "Research/Portfolio".
+2. The "Research/Portfolio" button links to a new page that embeds your thesis documents.
+3. The "Resume" button links to a new page that embeds the "Resume - Guido Huisman (1).pdf" document.
+4. The front page includes the "lab photo" and the "AI LinkedIn photo".
+
+```html
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,15 +29,10 @@
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/additional.css"><link rel="stylesheet" href="assets/mobirise/css/additional.css" type="text/css">
-  
-  
-
   <style>:root{ --background: #EFE8F5; --dominant-color: #5A189A; --primary-color: #C77DFF; --secondary-color: #D5B2E7; --success-color: #66E3A9; --danger-color: #E46571; --warning-color: #FFD24A; --info-color: #53DBF6; --background-text: #000000; --dominant-text: #FFFFFF; --primary-text: #000000; --secondary-text: #000000; --success-text: #000000; --danger-text: #000000; --warning-text: #000000; --info-text: #000000;}</style>
 </head>
 <body>
-
-
-    <style>
+<style>
 .cid-tYn6MvGRpQ  {
   z-index: 1000;
   width: 100%;
@@ -196,7 +199,9 @@
   background: #ffffff;
   background: rgba(255, 255, 255, 0.8) !important;
 }
-.cid-tYn6MvGRpQ  .nav-item:focus,
+.cid-tYn6Mv
+
+GRpQ  .nav-item:focus,
 .cid-tYn6MvGRpQ  .nav-link:focus {
   outline: none;
 }
@@ -334,7 +339,7 @@
   .cid-tYn6MvGRpQ  .navbar .navbar-toggler {
     flex-basis: auto;
   }
-  .cid-tYn6MvGRpQ  .navbar .icons-menu {
+  .cid-tYn6MvGRpQ  .icons-menu {
     padding-left: 0;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -421,7 +426,9 @@
   right: 50%;
   transition: all 0.2s;
 }
-.cid-tYn6MvGRpQ  nav.opened .hamburger span:nth-child(2) {
+.cid-tYn6MvGRpQ  nav.opened
+
+ .hamburger span:nth-child(2) {
   transform: rotate(45deg);
   transition: all 0.25s;
 }
@@ -585,435 +592,4 @@
   }
 }
 @media (max-width: 575px) {
-  .cid-tYn6MvGRpQ  .navbar-collapse {
-    padding: 1rem;
-  }
-}
-</style>
-
-<section data-bs-version="5.1" class="menu menu2 cid-tYn6MvGRpQ" once="menu" id="menu-5-tYn6MvGRpQ">
-  <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
-    <div class="container">
-      <div class="navbar-brand">
-        <span class="navbar-logo">
-					<a href="about me.html">
-						<img src="insert image here" style="height: 4.3rem;">
-					</a>
-				</span>
-				<span class="navbar-caption-wrap">
-          <a class="navbar-caption text-black display-4" href="about me.html">About me</a>
-        </span>
-      </div>
-      <button class="navbar-toggler" type="button" data-toggle="collapse"
-        data-bs-toggle="collapse" data-target="#navbarSupportedContent"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <div class="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
-          <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="resume.html">Resume</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="contact.html"
-              aria-expanded="false">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="research.html">Research</a>
-          </li>
-        </ul>
-        <div class="navbar-buttons mbr-section-btn">
-          <a class="btn btn-primary display-4" href="portfolio.html">Portfolio</a>
-        </div>
-      </div>
-    </div>
-  </nav>
-</section>
-
-    <style>
-  .cid-tYn6MvHuzz {
-    display: flex;
-    background-image: url("insert image here");
-  }
-  .cid-tYn6MvHuzz .mbr-overlay {
-    background-color: #000000;
-    opacity: 0.5;
-  }
-  @media (min-width: 768px) {
-    .cid-tYn6MvHuzz {
-      align-items: flex-end;
-    }
-    .cid-tYn6MvHuzz .row {
-      justify-content: center;
-    }
-    .cid-tYn6MvHuzz .content-wrap {
-      padding: 1rem 3rem;
-    }
-  }
-  @media (max-width: 991px) and (min-width: 768px) {
-    .cid-tYn6MvHuzz .content-wrap {
-      min-width: 50%;
-    }
-  }
-  @media (max-width: 767px) {
-    .cid-tYn6MvHuzz {
-      -webkit-align-items: center;
-      align-items: flex-end;
-    }
-    .cid-tYn6MvHuzz .mbr-row {
-      -webkit-justify-content: center;
-      justify-content: center;
-    }
-    .cid-tYn6MvHuzz .content-wrap {
-      width: 100%;
-    }
-  }
-  .cid-tYn6MvHuzz .mbr-section-title,
-  .cid-tYn6MvHuzz .mbr-section-subtitle {
-    text-align: center;
-  }
-  .cid-tYn6MvHuzz .mbr-text,
-  .cid-tYn6MvHuzz .mbr-section-btn {
-    text-align: center;
-  }
-</style>
-<section data-bs-version="5.1" class="header16 cid-tYn6MvHuzz mbr-fullscreen mbr-parallax-background" id="hero-17-tYn6MvHuzz">
-  <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);"></div>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="content-wrap col-12 col-md-10">
-        <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-4 display-1">
-          <strong>Guido Huisman</strong>
-        </h1>
-        <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">This is me</p>
-        <div class="mbr-section-btn"><a class="btn btn-white-outline display-7" href="#">BSc, MSc, Research MSc</a></div>
-      </div>
-    </div>
-  </div>
-</section>
-    <style>
-.cid-tYn6MvHvS9 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: transparent;
-}
-.cid-tYn6MvHvS9 .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tYn6MvHvS9 .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-tYn6MvHvS9 .card-wrapper {
-  background: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-tYn6MvHvS9 .card-wrapper {
-    padding: 2rem 1.5rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-tYn6MvHvS9 .card-wrapper {
-    padding: 2.25rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-tYn6MvHvS9 .card-wrapper {
-    padding: 4rem;
-  }
-}
-.cid-tYn6MvHvS9 .mbr-text,
-.cid-tYn6MvHvS9 .mbr-section-btn {
-  color: #000000;
-  text-align: left;
-}
-.cid-tYn6MvHvS9 .card-title,
-.cid-tYn6MvHvS9 .card-box {
-  text-align: left;
-  color: #000000;
-}
-</style>
-<section data-bs-version="5.1" class="article07 cid-tYn6MvHvS9" id="generic-text-7-tYn6MvHvS9">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="card col-md-12 col-lg-10">
-        <div class="card-wrapper">
-          <h3 class="card-title mbr-fonts-style mbr-white mt-3 mb-4 display-2">
-            <strong>About Guido</strong>
-          </h3>
-          <div class="row card-box align-left">
-            <div class="item features-without-image col-12">
-              <div class="item-wrapper">
-                <p class="mbr-text mbr-fonts-style display-7">
-                Welcome to my website!
-                </p>
-              </div>
-            </div>
-            <div class="item features-without-image col-12">
-              <div class="item-wrapper">
-                <p class="mbr-text mbr-fonts-style display-7">
-                  The scientific method is my life mantra. 
-                </p>
-              </div>
-            </div>
-            <div class="item features-without-image col-12">
-              <div class="item-wrapper">
-                <p class="mbr-text mbr-fonts-style display-7">
-                  Explore what I stand for &amp; my mission
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-    <style>
-.cid-tYn6MvHql2 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background: transparent;
-}
-.cid-tYn6MvHql2 .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tYn6MvHql2 .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-@media (max-width: 992px) {
-  .cid-tYn6MvHql2 .row .map-wrapper {
-    margin-top: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tYn6MvHql2 .row .map-wrapper {
-    margin-top: 1rem;
-  }
-}
-.cid-tYn6MvHql2 .google-map {
-  height: 100%;
-  position: relative;
-}
-.cid-tYn6MvHql2 .google-map iframe {
-  height: 100%;
-  width: 100%;
-}
-@media (max-width: 992px) {
-  .cid-tYn6MvHql2 .google-map iframe {
-    min-height: 350px;
-  }
-}
-.cid-tYn6MvHql2 .google-map [data-state-details] {
-  color: #6b6763;
-  height: 1.5em;
-  margin-top: -0.75em;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  width: 100%;
-}
-.cid-tYn6MvHql2 .google-map[data-state] {
-  background: #e9e5dc;
-}
-.cid-tYn6MvHql2 .google-map[data-state="loading"] [data-state-details] {
-  display: none;
-}
-.cid-tYn6MvHql2 .card-wrapper {
-  padding: 2.25rem;
-  background: #ffffff;
-}
-@media (min-width: 992px) and (max-width: 1200px) {
-  .cid-tYn6MvHql2 .card-wrapper {
-    padding: 1.5rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-tYn6MvHql2 .card-wrapper {
-    padding: 2rem 1.5rem;
-  }
-}
-.cid-tYn6MvHql2 ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-.cid-tYn6MvHql2 .content-head {
-  max-width: 800px;
-}
-
-</style>
-<section data-bs-version="5.1" class="contacts02 map1 cid-tYn6MvHql2" id="contacts-2-tYn6MvHql2">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-12 content-head">
-                <div class="mbr-section-head mb-5">
-                    <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                        <strong>Contact Details</strong>
-                    </h3>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="card col-12 col-md-12 col-lg-6">
-                <div class="card-wrapper">
-                    <div class="text-wrapper">
-                        <ul class="list mbr-fonts-style display-7">
-                          <li class="mbr-text item-wrap">Phone: <a href="tel:+13863441111" class="text-black">+13863441111</a></li>
-                          <li class="mbr-text item-wrap">WhatsApp: <a href="tel:+13863441111" class="text-black">+13863441111</a></li>
-                          <li class="mbr-text item-wrap">Email: <a href="mailto:guidohuisman@gmail.com" class="text-black">guidohuisman@gmail.com</a></li>
-                          <li class="mbr-text item-wrap">Address: Gainesville, Florida</li>
-                          <li class="mbr-text item-wrap">Feel free to reach out!</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="map-wrapper col-md-12 col-lg-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="embed google maps location here " allowfullscreen=""></iframe></div>
-            </div>
-        </div>
-    </div>
-</section>
-    <style>
-.cid-tYn6MvHZmO {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #000000;
-}
-.cid-tYn6MvHZmO .social-row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.cid-tYn6MvHZmO .social-row .soc-item {
-  margin: 8px;
-}
-.cid-tYn6MvHZmO .social-row .soc-item a:hover .mbr-iconfont,
-.cid-tYn6MvHZmO .social-row .soc-item a:focus .mbr-iconfont {
-  background-color: #ffffff;
-}
-.cid-tYn6MvHZmO .social-row .soc-item a .mbr-iconfont {
-  width: 72px;
-  height: 72px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 100%;
-  font-size: 32px;
-  background-color: #edefeb;
-  color: #000000;
-  transition: all 0.3s ease-in-out;
-}
-.cid-tYn6MvHZmO .row-links {
-  width: 100%;
-  justify-content: center;
-}
-.cid-tYn6MvHZmO .header-menu {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 0;
-  margin-bottom: 0;
-}
-.cid-tYn6MvHZmO .header-menu li {
-  padding: 0 1rem 1rem 1rem;
-}
-.cid-tYn6MvHZmO .header-menu li p {
-  margin: 0;
-}
-.cid-tYn6MvHZmO .copyright {
-  margin-bottom: 0;
-  color: #ffffff;
-  text-align: center;
-}
-.cid-tYn6MvHZmO .mbr-section-title {
-  color: #ffffff;
-}
-
-</style>
-<section data-bs-version="5.1" class="footer3 cid-tYn6MvHZmO" once="footers" id="footer-3-tYn6MvHZmO">
-    <div class="container">
-        <div class="row">
-            <div class="row-links">
-                <ul class="header-menu">
-                <li class="header-menu-item mbr-fonts-style display-5">
-                    <a href="about me.html" class="text-white">About Me</a>
-                  </li><li class="header-menu-item mbr-fonts-style display-5">
-                    <a href="portfolio.html" class="text-white">Portfolio</a>
-                  </li><li class="header-menu-item mbr-fonts-style display-5">
-                    <a href="resume.html" class="text-white">Resume</a>
-                  </li><li class="header-menu-item mbr-fonts-style display-5">
-                    <a href="contact.html" class="text-white">Contact Info</a>
-                  </li></ul>
-              </div>
-
-            <div class="col-12 mt-4">
-                <div class="social-row">
-                    <div class="soc-item">
-                        <a href="https://www.facebook.com/guido.huisman/" target="_blank">
-                            <span class="mbr-iconfont socicon socicon-facebook display-7"></span>
-                        </a>
-                    </div>
-                    <div class="soc-item">
-                        <a href="https://www.instagram.com/guidus125/" target="_blank">
-                            <span class="mbr-iconfont socicon-instagram socicon"></span>
-                        </a>
-                    </div>
-                    <div class="soc-item">
-                        <a href="https://www.linkedin.com/in/guidohuisman" target="_blank">
-                            <span class="mbr-iconfont socicon socicon-linkedin"></span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 mt-5">
-                <p class="mbr-fonts-style copyright display-7">
-                    © 2023 Guido Huisman
-                </p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<script src="assets/parallax/jarallax.js"></script>
-  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/ytplayer/index.js"></script>
-  <script src="assets/theme/js/script.js"></script>
-  
-  <script>
-
-    (function(){
-      var animationInput = document.createElement('input');
-      animationInput.setAttribute('name', 'animation');
-      animationInput.setAttribute('type', 'hidden');
-      document.body.append(animationInput);
-    })();
-
-  </script>
-</body>
-</html>
+  .cid-tYn6MvGRp
